Fit multiple LC at once.

--- a/crossmatch_lyrae_ztf.ipynb
+++ b/crossmatch_lyrae_ztf.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -158,17 +158,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 54.4 ms, sys: 17.2 ms, total: 71.6 ms\n",
-      "Wall time: 1min 26s\n"
+      "CPU times: user 201 ms, sys: 13.8 ms, total: 215 ms\n",
+      "Wall time: 1min 25s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "matched = sesar_axs.crossmatch(ztf).drop(\"axsdist\")\n",
-    "results = (matched.select(\"ra\", \"dec\", \"matchid\", \"Per\", \"weightedmeanmag\", \"filterid\", \"mjd\", \"psfflux\")\n",
-    "                  .where((spark_size(matched['mjd']) > 5) &\n",
-    "                         ( (matched['S3ab'] > 0.8) | (matched['S3c'] > 0.8))).head(200))"
+    "matched_filtered = (matched.select(\"ra\", \"dec\", \"matchid\", \"Per\", \"weightedmeanmag\", \"filterid\", \"mjd\", \"psfflux\")\n",
+    "                    .where((spark_size(matched['mjd']) > 5) &\n",
+    "                           ((matched['S3ab'] > 0.8) | (matched['S3c'] > 0.8))))\n",
+    "results = matched_filtered.head(200)"
    ]
   },
   {
@@ -205,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cesium\n",
     "from cesium.time_series import TimeSeries\n",
-    "from cesium.featurize import featurize_single_ts"
+    "from cesium.featurize import featurize_single_ts, featurize_time_series"
    ]
   },
   {
@@ -252,6 +253,7 @@
     "                   \"skew\",\n",
     "                   \"std\",\n",
     "                   \"weighted_average\"]\n",
+    "\n",
     "ls_features = [\"freq1_amplitude1\",\n",
     "                \"freq1_amplitude2\",\n",
     "                \"freq1_amplitude3\",\n",
@@ -365,6 +367,95 @@
    ],
    "source": [
     "feat_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 92.3 ms, sys: 36.8 ms, total: 129 ms\n",
+      "Wall time: 13min 13s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "109850351"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "ztf.where(spark_size(matched['mjd']) > 10).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 284 ms, sys: 1.58 s, total: 1.87 s\n",
+      "Wall time: 74.2 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "ts = TimeSeries(t=np.array(result['mjd']), m=np.array(result['psfflux']))\n",
+    "feat_out = featurize_single_ts(ts, features_to_use + ls_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/epyc/opt/anaconda/lib/python3.6/site-packages/cesium/features/common_functions.py:7: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  slopes = np.diff(x) / np.diff(t)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 2s, sys: 3min 25s, total: 4min 27s\n",
+      "Wall time: 3.37 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "feat_out2 = featurize_time_series([np.array(res['mjd']) for res in results[:20]],\n",
+    "                                  [np.array(res['psfflux']) for res in results[:20]],\n",
+    "                                  features_to_use=features_to_use + ls_features\n",
+    "                                  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matched_filtered.foreach().head(5)"
    ]
   },
   {
