Run cesium inside spark.

--- a/crossmatch_lyrae_ztf.ipynb
+++ b/crossmatch_lyrae_ztf.ipynb
@@ -524,6 +524,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cesium UDF\n",
+    "======="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from pyspark.sql.types import ArrayType, FloatType, DoubleType\n",
+    "from pyspark.sql.functions import col, pandas_udf, explode\n",
+    "\n",
+    "#np.array(res['mjd']) for res in results[:20]],\n",
+    "#[np.array(res['psfflux']) for res in results[:20]],\n",
+    "\n",
+    "   \n",
+    "    \n",
+    "def featurize_udf(mjd, psfflux):\n",
+    "    feat_outs = []\n",
+    "    for row_mjd, row_psfflux in zip(mjd, psfflux):\n",
+    "        feat_out = featurize_time_series(np.array(row_mjd), np.array(row_psfflux), features_to_use=features_to_use + ls_features)\n",
+    "        feat_outs.append(feat_out.values.flatten())\n",
+    "    return pd.Series(feat_outs)\n",
+    "\n",
+    "featurize_lc = pandas_udf(featurize_udf, returnType=ArrayType(DoubleType()))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 182 ms, sys: 12.4 ms, total: 194 ms\n",
+      "Wall time: 38 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "feature_results = matched_filtered.select(featurize_lc(matched_filtered['mjd'], matched_filtered['psfflux'])).head(4)\n",
+    "feature_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(featurize_udf(mjd, psfflux)=[9396.832794189453, 0.30718954248366015, 19601.49609375, 825072.5468358505, 12735.896484375, 2143.48046875, 0.43137254901960786, 807.8305053710938, -0.37543006309128435, 3359.907708598801, 13263.989590912863, 3022.1994726892235, 1063.5689251811777, 230.7537648132592, 16.869063248696087, 1.7393636957614456, 7.425334084418403, -0.9526102393556031, -1.6430480738036535, 2.4733237980405356, 7.547383578188932, 892.550621721922, 59.02211695616729, 3.508887093596339, 2.409814231998434, 1.3538175947376925, 1.8663721976359344, 1.857010582095423, 3.1269629685411493]),\n",
+       " Row(featurize_udf(mjd, psfflux)=[7655.8603515625, 0.3181818181818182, 23763.40234375, 480208.8385207813, 17983.7255859375, 1844.8056640625, 0.41818181818181815, 8451.681640625, -0.30507508629085683, 2857.160420422937, 18263.139808238637, 2918.264785954053, 773.380454751372, 276.1248845191095, 21.177961680714656, 1.739378359652744, 5.8911118263595785, -0.6155602728823508, -0.7834440410618557, -3.1167191081767185, 6.633045541851145, 973.1523162168359, 167.69779654162477, 32.716183072284714, 14.567441176050583, 0.9753030810338179, 2.2592196640197346, -2.6713860198341597, -1.384821522592914]),\n",
+       " Row(featurize_udf(mjd, psfflux)=[1372.486083984375, 0.16666666666666666, 3615.76220703125, 1419.0569173291265, 1233.5812377929688, 239.1600341796875, 0.5, 870.7900390625, 1.1972984705269454, 944.5155069981969, 1706.7448323567708, 736.4389649124416, 32.185376677260315, 10.009893750062172, 3.755621492127094, 10.525944342050622, 1.25795143435264, 0.379072942038422, -2.0045777855022444, -1.5396808200490697, 1.14987691336929, 16.202399314909844, 0.47296251478613244, 0.512833888699766, 0.06191589861220739, 3.2623751385721373, 2.726896772746703, -0.4796129727947809, 2.3480297282672287]),\n",
+       " Row(featurize_udf(mjd, psfflux)=[134.6336212158203, 0.3394495412844037, 442.0951843261719, 27549.864628545132, 273.7404479980469, 38.3623046875, 0.3853211009174312, 172.82794189453125, 0.5444190713205875, 60.14138885173661, 283.70539212008134, 51.573942516144996, 25.015482848665382, 6.677453540164561, 1.4371794103402216, 1.4358187814612504, 5.929975806195178, -0.7180403804770841, -1.5652851759059527, -1.9451230608223544, 6.476795467582467, 14.265792888238904, 2.344802918911193, 0.3025261825018896, 0.09378416059037348, 24.98085786478227, 0.6670351985958463, 2.5738007766705526, 1.8203278486309922])]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Handling Duplicates\n",
     "==========\n",
     "\n",
