Cesium as a udf.

--- a/crossmatch_lyrae_ztf.ipynb
+++ b/crossmatch_lyrae_ztf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,8 @@
     "def featurize_udf(mjd, psfflux):\n",
     "    feat_outs = []\n",
     "    for row_mjd, row_psfflux in zip(mjd, psfflux):\n",
-    "        feat_out = featurize_time_series(np.array(row_mjd), np.array(row_psfflux), features_to_use=features_to_use + ls_features)\n",
+    "        feat_out = featurize_time_series(np.array(row_mjd), np.array(row_psfflux),\n",
+    "                                         features_to_use=features_to_use + ls_features)\n",
     "        feat_outs.append(feat_out.values.flatten())\n",
     "    return pd.Series(feat_outs)\n",
     "\n",
@@ -565,28 +566,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 182 ms, sys: 12.4 ms, total: 194 ms\n",
-      "Wall time: 38 s\n"
+      "CPU times: user 157 ms, sys: 10.1 ms, total: 167 ms\n",
+      "Wall time: 1min\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "feature_results = matched_filtered.select(featurize_lc(matched_filtered['mjd'], matched_filtered['psfflux'])).head(4)\n",
+    "feature_results = matched_filtered.select(\n",
+    "    featurize_lc(matched_filtered['mjd'], matched_filtered['psfflux'])).head(200)\n",
     "feature_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +600,7 @@
        " Row(featurize_udf(mjd, psfflux)=[134.6336212158203, 0.3394495412844037, 442.0951843261719, 27549.864628545132, 273.7404479980469, 38.3623046875, 0.3853211009174312, 172.82794189453125, 0.5444190713205875, 60.14138885173661, 283.70539212008134, 51.573942516144996, 25.015482848665382, 6.677453540164561, 1.4371794103402216, 1.4358187814612504, 5.929975806195178, -0.7180403804770841, -1.5652851759059527, -1.9451230608223544, 6.476795467582467, 14.265792888238904, 2.344802918911193, 0.3025261825018896, 0.09378416059037348, 24.98085786478227, 0.6670351985958463, 2.5738007766705526, 1.8203278486309922])]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,6 +649,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
+    "1/0\n",
     "\n",
     "matched = sesar_axs.crossmatch(ztf).drop(\"axsdist\")\n",
     "renames = []\n",
