--- a/crossmatch_lyrae_ztf.ipynb
+++ b/crossmatch_lyrae_ztf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,15 @@
     "import os\n",
     "from pyspark.sql.functions import size as spark_size\n",
     "from matplotlib.backends.backend_pdf import PdfPages\n",
-    "\n",
+    "from pyspark.sql.functions import min as spark_min\n",
+    "from pyspark.sql.functions import max as spark_max\n",
     "\n",
     "matplotlib.rcParams['figure.dpi'] = 120"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,107 +70,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 14.4 ms, sys: 8.51 ms, total: 22.9 ms\n",
-      "Wall time: 19.3 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[Row(matchid='00037712032113057', ra=227.4292279, dec=-9.6026943, zone=4823, dup=0, astrometricrms=0.0, bestastrometricrms=0.0, bestchisq=0.0, bestcon=0.0, bestlineartrend=0.0, bestmagrms=0.0, bestmaxmag=0.0, bestmaxslope=0.0, bestmeanmag=0.0, bestmedianabsdev=0.0, bestmedianmag=0.0, bestminmag=0.0, bestnmedianbufferrange=0, bestnpairposslope=0, bestprobnonqso=0.0, bestprobqso=0.0, bestskewness=0.0, bestsmallkurtosis=0.0, beststetsonj=0.0, beststetsonk=0.0, bestvonneumannratio=0.0, bestweightedmagrms=0.0, bestweightedmeanmag=0.0, chisq=0.0, con=0.0, lineartrend=0.0, magrms=None, maxmag=20.48711585998535, maxslope=0.0, meanmag=20.48711585998535, medianabsdev=0.0, medianmag=20.48711585998535, minmag=20.48711585998535, nbestobs=0, ngoodobs=1, nmedianbufferrange=0, nobs=1, npairposslope=0, probnonqso=0.0, probqso=0.0, refchi=0.0, refmag=0.0, refmagerr=0.0, refsharp=0.0, refsnr=0.0, skewness=0.0, smallkurtosis=0.0, stetsonj=0.0, stetsonk=0.0, uncalibmeanmag=0.0, vonneumannratio=0.0, weightedmagrms=-0.0, weightedmeanmag=20.48711585998535, is_transient=True, bestnabovemeanbystd=[0, 0, 0], bestnbelowmeanbystd=[0, 0, 0], bestnconsecabovemeanbystd=[0, 0, 0], bestnconsecbelowmeanbystd=[0, 0, 0], bestnconsecfrommeanbystd=[0, 0, 0], nabovemeanbystd=[0, 0, 0], nbelowmeanbystd=[0, 0, 0], nconsecabovemeanbystd=[0, 0, 0], nconsecbelowmeanbystd=[0, 0, 0], nconsecfrommeanbystd=[0, 0, 0], bestpercentiles=[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0], percentiles=[20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535, 20.48711585998535], bestperiodsearch=[[0.0, 0.0], [0.0, 0.0], [0.0, 0.0], [0.0, 0.0], [0.0, 0.0]], periodsearch=[[0.0, 0.0], [0.0, 0.0], [0.0, 0.0], [0.0, 0.0], [0.0, 0.0]], filterid=[], catflags=[], chi=[], declc=[], expid=[], hjd=[], mag=[], magerr=[], mjd=[], programid=[], psfflux=[], psffluxerr=[], psfmag=[], psfmagerr=[], ralc=[], relphotflags=[], sharp=[], sid=[], snr=[], xpos=[], ypos=[])]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "ztf.select(\"*\").where((ztf['matchid'] == 37712032113057) & (ztf['zone'] == 4823)).collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method crossmatch in module axs.axsframe:\n",
-      "\n",
-      "crossmatch(axsframe, r=0.0002777777777777778) method of axs.axsframe.AxsFrame instance\n",
-      "    Performs the cross-match operation between this AxsFrame and `axsframe`, which can be either an AxsFrame or\n",
-      "    a Spark's DataFrame, using `r` for the cross-matching radius (one arc-second by default).\n",
-      "    \n",
-      "    Both frames need to have `zone`, `ra`, `dec`, and `dup` columns.\n",
-      "    \n",
-      "    Bote that if `axsframe` is a Spark frame, the cross-match operation will not be optimized and might take\n",
-      "    a much longer time to complete.\n",
-      "    \n",
-      "    The best performance can be expected when both tables are read directly as AxsFrames.\n",
-      "    In that scenario cross-matching will be done on bucket pairs in parallel without data movement between\n",
-      "    executors. If, however, one of the two AxsFrames being cross-matched is the result of a `groupBy` operation,\n",
-      "    for example, data movement cannot be avoided. In those cases, it might prove faster to first save the\n",
-      "    \"grouped by\" table using `save_axs_table` and then do the cross-match.\n",
-      "    \n",
-      "    .. warning::\n",
-      "        The two AXS tables being cross-matched need to have the same zone height and the same number of buckets.\n",
-      "        The results are otherwise unreliable.\n",
-      "    \n",
-      "    The resulting table will contain all colunms from both input tables.\n",
-      "    \n",
-      "    :param axsframe: The AXS frame or Spark DataFrame to be used cross-matched\n",
-      "    :param r: The search radius used for cross-matching. One arc-second by default.\n",
-      "    :return: AxsFrame containing cross-matching results with all columns from both frames.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(ztf.crossmatch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
     "sesar_axs = catalog.load(\"sesar_rrlyrae\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 201 ms, sys: 13.8 ms, total: 215 ms\n",
-      "Wall time: 1min 25s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "matched = sesar_axs.crossmatch(ztf).drop(\"axsdist\")\n",
-    "matched_filtered = (matched.select(\"ra\", \"dec\", \"matchid\", \"Per\", \"weightedmeanmag\", \"filterid\", \"mjd\", \"psfflux\")\n",
-    "                    .where((spark_size(matched['mjd']) > 5) &\n",
-    "                           ((matched['S3ab'] > 0.8) | (matched['S3c'] > 0.8))))\n",
-    "results = matched_filtered.head(200)"
    ]
   },
   {
@@ -179,9 +82,31 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "\n",
-    "# This takes a while\n",
-    "#matched.where(spark_size(matched['mjd']) > 5).count()"
+    "matched = sesar_axs.crossmatch(ztf).drop(\"axsdist\")\n",
+    "matched_filtered = (matched.select(\"ra\", \"dec\", \"matchid\", \"Per\", \"weightedmeanmag\", \"filterid\", \"mjd\", \"psfflux\")\n",
+    "                    .where((spark_size(matched['mjd']) > 5) &\n",
+    "                           ((matched['S3ab'] > 0.8) | (matched['S3c'] > 0.8))\n",
+    "                            ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 40.2 ms, sys: 18 ms, total: 58.2 ms\n",
+      "Wall time: 1min 32s\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = matched_filtered.head(200)"
    ]
   },
   {
@@ -206,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,31 +475,70 @@
     "#np.array(res['mjd']) for res in results[:20]],\n",
     "#[np.array(res['psfflux']) for res in results[:20]],\n",
     "\n",
-    "   \n",
+    "features_to_use = [\"amplitude\",\n",
+    "                   \"percent_beyond_1_std\",\n",
+    "                   \"maximum\",\n",
+    "                   \"max_slope\",\n",
+    "                   \"median\",\n",
+    "                   \"median_absolute_deviation\",\n",
+    "                   \"percent_close_to_median\",\n",
+    "                   \"minimum\",\n",
+    "                   \"skew\",\n",
+    "                   \"std\",\n",
+    "                   \"weighted_average\"]\n",
+    "\n",
+    "ls_features = [\"freq1_amplitude1\",\n",
+    "                \"freq1_amplitude2\",\n",
+    "                \"freq1_amplitude3\",\n",
+    "                \"freq1_amplitude4\",\n",
+    "                \"freq1_freq\",\n",
+    "                \"freq1_lambda\",\n",
+    "                \"freq1_rel_phase2\",\n",
+    "                \"freq1_rel_phase3\",\n",
+    "                \"freq1_rel_phase4\",\n",
+    "                \"freq1_signif\",\n",
+    "                \"freq2_amplitude1\",\n",
+    "                \"freq2_amplitude2\",\n",
+    "                \"freq2_amplitude3\",\n",
+    "                \"freq2_amplitude4\",\n",
+    "                \"freq2_freq\",\n",
+    "                \"freq2_rel_phase2\",\n",
+    "                \"freq2_rel_phase3\",\n",
+    "                \"freq2_rel_phase4\"]\n",
     "    \n",
     "def featurize_udf(mjd, psfflux):\n",
     "    feat_outs = []\n",
+    "    \n",
     "    for row_mjd, row_psfflux in zip(mjd, psfflux):\n",
-    "        feat_out = featurize_time_series(np.array(row_mjd), np.array(row_psfflux),\n",
-    "                                         features_to_use=features_to_use + ls_features)\n",
-    "        feat_outs.append(feat_out.values.flatten())\n",
+    "        mjd_arr = np.array(row_mjd)\n",
+    "        \n",
+    "        # If the time between the first and last observation is <0.06, \n",
+    "        # cesium throws an error.\n",
+    "        if(np.max(mjd_arr) - np.min(mjd_arr) < 0.10):\n",
+    "            feat_outs.append(np.zeros(len(features_to_use) + len(ls_features)))\n",
+    "        else:\n",
+    "            feat_out = featurize_time_series(mjd_arr, np.array(row_psfflux),\n",
+    "                                             features_to_use=features_to_use + ls_features)\n",
+    "            feat_outs.append(feat_out.values.flatten())\n",
+    "\n",
     "    return pd.Series(feat_outs)\n",
     "\n",
-    "featurize_lc = pandas_udf(featurize_udf, returnType=ArrayType(DoubleType()))\n",
-    "\n"
+    "featurize_lc = pandas_udf(featurize_udf, returnType=ArrayType(DoubleType()))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 157 ms, sys: 10.1 ms, total: 167 ms\n",
-      "Wall time: 1min\n"
+      "CPU times: user 50.9 ms, sys: 14 ms, total: 65 ms\n",
+      "Wall time: 5min 46s\n"
      ]
     }
    ],
@@ -582,31 +546,27 @@
     "%%time\n",
     "\n",
     "feature_results = matched_filtered.select(\n",
-    "    featurize_lc(matched_filtered['mjd'], matched_filtered['psfflux'])).head(200)\n",
-    "feature_results"
+    "    featurize_lc(matched_filtered['mjd'], matched_filtered['psfflux'])).head(1000)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(featurize_udf(mjd, psfflux)=[9396.832794189453, 0.30718954248366015, 19601.49609375, 825072.5468358505, 12735.896484375, 2143.48046875, 0.43137254901960786, 807.8305053710938, -0.37543006309128435, 3359.907708598801, 13263.989590912863, 3022.1994726892235, 1063.5689251811777, 230.7537648132592, 16.869063248696087, 1.7393636957614456, 7.425334084418403, -0.9526102393556031, -1.6430480738036535, 2.4733237980405356, 7.547383578188932, 892.550621721922, 59.02211695616729, 3.508887093596339, 2.409814231998434, 1.3538175947376925, 1.8663721976359344, 1.857010582095423, 3.1269629685411493]),\n",
-       " Row(featurize_udf(mjd, psfflux)=[7655.8603515625, 0.3181818181818182, 23763.40234375, 480208.8385207813, 17983.7255859375, 1844.8056640625, 0.41818181818181815, 8451.681640625, -0.30507508629085683, 2857.160420422937, 18263.139808238637, 2918.264785954053, 773.380454751372, 276.1248845191095, 21.177961680714656, 1.739378359652744, 5.8911118263595785, -0.6155602728823508, -0.7834440410618557, -3.1167191081767185, 6.633045541851145, 973.1523162168359, 167.69779654162477, 32.716183072284714, 14.567441176050583, 0.9753030810338179, 2.2592196640197346, -2.6713860198341597, -1.384821522592914]),\n",
-       " Row(featurize_udf(mjd, psfflux)=[1372.486083984375, 0.16666666666666666, 3615.76220703125, 1419.0569173291265, 1233.5812377929688, 239.1600341796875, 0.5, 870.7900390625, 1.1972984705269454, 944.5155069981969, 1706.7448323567708, 736.4389649124416, 32.185376677260315, 10.009893750062172, 3.755621492127094, 10.525944342050622, 1.25795143435264, 0.379072942038422, -2.0045777855022444, -1.5396808200490697, 1.14987691336929, 16.202399314909844, 0.47296251478613244, 0.512833888699766, 0.06191589861220739, 3.2623751385721373, 2.726896772746703, -0.4796129727947809, 2.3480297282672287]),\n",
-       " Row(featurize_udf(mjd, psfflux)=[134.6336212158203, 0.3394495412844037, 442.0951843261719, 27549.864628545132, 273.7404479980469, 38.3623046875, 0.3853211009174312, 172.82794189453125, 0.5444190713205875, 60.14138885173661, 283.70539212008134, 51.573942516144996, 25.015482848665382, 6.677453540164561, 1.4371794103402216, 1.4358187814612504, 5.929975806195178, -0.7180403804770841, -1.5652851759059527, -1.9451230608223544, 6.476795467582467, 14.265792888238904, 2.344802918911193, 0.3025261825018896, 0.09378416059037348, 24.98085786478227, 0.6670351985958463, 2.5738007766705526, 1.8203278486309922])]"
+       "Row(featurize_udf(mjd, psfflux)=[9396.832794189453, 0.30718954248366015, 19601.49609375, 825072.5468358505, 12735.896484375, 2143.48046875, 0.43137254901960786, 807.8305053710938, -0.37543006309128435, 3359.907708598801, 13263.989590912863, 3022.1994726892235, 1063.5689251811777, 230.7537648132592, 16.869063248696087, 1.7393636957614456, 7.425334084418403, -0.9526102393556031, -1.6430480738036535, 2.4733237980405356, 7.547383578188932, 892.550621721922, 59.02211695616729, 3.508887093596339, 2.409814231998434, 1.3538175947376925, 1.8663721976359344, 1.857010582095423, 3.1269629685411493])"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "feature_results"
+    "feature_results[0]"
    ]
   },
   {
